tests/build/fail/impl_ui_node/invalid_delegate_list_pair.stderr
error: expected `, delegate_list_mut = <expr>`
 --> $DIR/invalid_delegate_list_pair.rs:6:38
  |
6 | #[impl_ui_node(delegate_list = &self.inner)]
  |                                      ^^^^^

error: expected `, delegate_list = <expr>`
  --> $DIR/invalid_delegate_list_pair.rs:12:46
   |
12 | #[impl_ui_node(delegate_list_mut = &mut self.inner)]
   |                                              ^^^^^

warning: unused imports: `UiNodeList`, `UiNode`
 --> $DIR/invalid_delegate_list_pair.rs:1:35
  |
1 | use zero_ui::core::{impl_ui_node, UiNode, UiNodeList};
  |                                   ^^^^^^  ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
